tests/baselines/reference/coAndContraVariantInferences13.errors.txt
coAndContraVariantInferences13.ts(17,17): error TS2345: Argument of type '{}' is not assignable to parameter of type '{ name?: string | undefined; } & ElementAttributes'.
  Property 'idomKey' is missing in type '{}' but required in type 'ElementAttributes'.
coAndContraVariantInferences13.ts(18,19): error TS2353: Object literal may only specify known properties, and 'age' does not exist in type '{ name?: string | undefined; } & ElementAttributes'.
coAndContraVariantInferences13.ts(23,18): error TS2345: Argument of type '{}' is not assignable to parameter of type '{ name: string; } & ElementAttributes'.
  Property 'name' is missing in type '{}' but required in type '{ name: string; }'.
coAndContraVariantInferences13.ts(24,20): error TS2353: Object literal may only specify known properties, and 'age' does not exist in type '{ name: string; } & ElementAttributes'.
coAndContraVariantInferences13.ts(25,18): error TS2345: Argument of type '{ idomKey: null; }' is not assignable to parameter of type '{ name: string; } & ElementAttributes'.
  Property 'name' is missing in type '{ idomKey: null; }' but required in type '{ name: string; }'.
coAndContraVariantInferences13.ts(28,18): error TS2345: Argument of type '{ name: string; }' is not assignable to parameter of type '{ name: string; } & ElementAttributes'.
  Property 'idomKey' is missing in type '{ name: string; }' but required in type 'ElementAttributes'.
coAndContraVariantInferences13.ts(29,18): error TS2345: Argument of type '{ age: number; }' is not assignable to parameter of type '{ age: number; } & ElementAttributes'.
  Property 'idomKey' is missing in type '{ age: number; }' but required in type 'ElementAttributes'.
coAndContraVariantInferences13.ts(33,18): error TS2345: Argument of type '{ name?: string | undefined; }' is not assignable to parameter of type '{ name?: string | undefined; } & ElementAttributes'.
  Property 'idomKey' is missing in type '{ name?: string | undefined; }' but required in type 'ElementAttributes'.


==== coAndContraVariantInferences13.ts (8 errors) ====
    // https://github.com/microsoft/TypeScript/issues/59765
    
    type FunctionComponent<P = any> = (props: P) => Element | null;
    
    interface ElementAttributes {
      idomKey: string | null | number;
      children?: unknown;
      skip?: boolean;
    }
    
    declare function element<P>(
      tag: FunctionComponent<P & ElementAttributes>,
      attributes: P & ElementAttributes,
    ): Element;
    
    declare function ElName(props: { name?: string }): Element;
    element(ElName, {}); // error
                    ~~
!!! error TS2345: Argument of type '{}' is not assignable to parameter of type '{ name?: string | undefined; } & ElementAttributes'.
!!! error TS2345:   Property 'idomKey' is missing in type '{}' but required in type 'ElementAttributes'.
!!! related TS2728 coAndContraVariantInferences13.ts:6:3: 'idomKey' is declared here.
    element(ElName, { age: 42 }); // error
                      ~~~
!!! error TS2353: Object literal may only specify known properties, and 'age' does not exist in type '{ name?: string | undefined; } & ElementAttributes'.
    element(ElName, { idomKey: null }); // ok
    element(ElName, { idomKey: null, name: "Trevor" }); // ok
    
    declare function ElName2(props: { name: string }): Element;
    element(ElName2, {}); // error
                     ~~
!!! error TS2345: Argument of type '{}' is not assignable to parameter of type '{ name: string; } & ElementAttributes'.
!!! error TS2345:   Property 'name' is missing in type '{}' but required in type '{ name: string; }'.
!!! related TS2728 coAndContraVariantInferences13.ts:22:35: 'name' is declared here.
    element(ElName2, { age: 42 }); // error
                       ~~~
!!! error TS2353: Object literal may only specify known properties, and 'age' does not exist in type '{ name: string; } & ElementAttributes'.
    element(ElName2, { idomKey: null }); // error
                     ~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ idomKey: null; }' is not assignable to parameter of type '{ name: string; } & ElementAttributes'.
!!! error TS2345:   Property 'name' is missing in type '{ idomKey: null; }' but required in type '{ name: string; }'.
!!! related TS2728 coAndContraVariantInferences13.ts:22:35: 'name' is declared here.
    
    declare function ElEmpty(props: {}): Element;
    element(ElEmpty, { name: "Trevor" }); // error
                     ~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ name: string; }' is not assignable to parameter of type '{ name: string; } & ElementAttributes'.
!!! error TS2345:   Property 'idomKey' is missing in type '{ name: string; }' but required in type 'ElementAttributes'.
!!! related TS2728 coAndContraVariantInferences13.ts:6:3: 'idomKey' is declared here.
    element(ElEmpty, { age: 42 }); // error
                     ~~~~~~~~~~~
!!! error TS2345: Argument of type '{ age: number; }' is not assignable to parameter of type '{ age: number; } & ElementAttributes'.
!!! error TS2345:   Property 'idomKey' is missing in type '{ age: number; }' but required in type 'ElementAttributes'.
!!! related TS2728 coAndContraVariantInferences13.ts:6:3: 'idomKey' is declared here.
    element(ElEmpty, { idomKey: null }); // ok
    element(ElEmpty, { idomKey: null, name: "Trevor" }); // ok
    declare const withOptionalName: { name?: string };
    element(ElEmpty, withOptionalName); // error
                     ~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ name?: string | undefined; }' is not assignable to parameter of type '{ name?: string | undefined; } & ElementAttributes'.
!!! error TS2345:   Property 'idomKey' is missing in type '{ name?: string | undefined; }' but required in type 'ElementAttributes'.
!!! related TS2728 coAndContraVariantInferences13.ts:6:3: 'idomKey' is declared here.
    element(ElEmpty, { ...withOptionalName, idomKey: null }); // ok
    